lexer.c
/* Generated by re2c 0.13.5 on Thu Nov 19 23:49:14 2015 */
#include "lexer.h"
#include <stdlib.h>
#include <stdio.h>

token_type_t scan(const char* pos, const char** cursor)
{
    token_type_t retVal = TOKEN_UNDEFINED;
    const char* marker;

    if (NULL == cursor)
    {
        return TOKEN_ERROR;
    }

    
{
	char yych;
	unsigned int yyaccept = 0;

	yych = *pos;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\n':	goto yy8;
	case ' ':	goto yy4;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy10;
	case ':':	goto yy6;
	default:	goto yy12;
	}
yy2:
	++pos;
	{ *cursor = pos; return TOKEN_END; }
yy4:
	yyaccept = 0;
	yych = *(marker = ++pos);
	switch (yych) {
	case ' ':	goto yy21;
	case ':':	goto yy19;
	default:	goto yy5;
	}
yy5:
	{ *cursor = pos; return TOKEN_ERROR; }
yy6:
	++pos;
	yych = *pos;
	goto yy20;
yy7:
	{ *cursor = pos; return TOKEN_SEPARATOR; }
yy8:
	++pos;
	{ *cursor = pos; return TOKEN_NEWLINE; }
yy10:
	yyaccept = 1;
	yych = *(marker = ++pos);
	goto yy16;
yy11:
	{ *cursor = pos; return TOKEN_KEY_OR_VALUE; }
yy12:
	yych = *++pos;
	goto yy5;
yy13:
	++pos;
	yych = *pos;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy17;
	default:	goto yy14;
	}
yy14:
	pos = marker;
	switch (yyaccept) {
	case 0: 	goto yy5;
	case 1: 	goto yy11;
	}
yy15:
	yyaccept = 1;
	marker = ++pos;
	yych = *pos;
yy16:
	switch (yych) {
	case ' ':	goto yy13;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy15;
	default:	goto yy11;
	}
yy17:
	yyaccept = 1;
	marker = ++pos;
	yych = *pos;
	switch (yych) {
	case ' ':	goto yy13;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy17;
	default:	goto yy11;
	}
yy19:
	++pos;
	yych = *pos;
yy20:
	switch (yych) {
	case ' ':	goto yy19;
	default:	goto yy7;
	}
yy21:
	++pos;
	yych = *pos;
	switch (yych) {
	case ' ':	goto yy21;
	case ':':	goto yy19;
	default:	goto yy14;
	}
}


    return TOKEN_UNDEFINED;
}
